--- a/views/view-more-detail.html
+++ b/views/view-more-detail.html
@@ -36,11 +36,11 @@
   <div class="main">
     <div class="popular container">
       <h2><b> Popular in town</b></h2>
-      <div class="col-xl-12 d-flex for-margin-search2 justify-content-center ">
+      <div class="d-none d-xxl-block col-xl-12 d-flex for-margin-search2 justify-content-center ">
         <p>Click item to preview before you go to the reservation page</p>
       </div>
       <div class="row">
-        <div class="col-3">
+        <div class="col d-none d-xxl-block">
           <div class="img1">
             <img src="../assets/images/img3-home.png" class="float-start rounded">
             <form class="text-img1">
@@ -49,7 +49,7 @@
             </form>
           </div>
         </div>
-        <div class="col-3">
+        <div class="col  d-none d-xl-block">
           <div class="img1">
             <img src="../assets/images/img2-home.png" class="float-start rounded">
             <form class="text-img1">
@@ -58,7 +58,7 @@
             </form>
           </div>
         </div>
-        <div class="col-3">
+        <div class="col d-none d-md-block">
           <div class="img1 ">
             <img src="../assets/images/img1-home.png" class="float-start rounded">
             <form class="text-img1">
@@ -67,7 +67,7 @@
             </form>
           </div>
         </div>
-        <div class="col-3">
+        <div class="col">
           <div class="img1">
             <img src="../assets/images/img4-home.png" class="float-start rounded">
             <form class="text-img1">
@@ -85,7 +85,7 @@
     <div class="popular container">
       <h2><b> </b></h2>
       <div class="row">
-        <div class="col-3">
+        <div class="col d-none d-xxl-block">
           <div class="img1">
             <img src="../assets/images/car1.png" class="float-start rounded">
             <form class="text-img1">
@@ -94,7 +94,7 @@
             </form>
           </div>
         </div>
-        <div class="col-3">
+        <div class="col  d-none d-xl-block">
           <div class="img1">
             <img src="../assets/images/car2.png" class="float-start rounded">
             <form class="text-img1">
@@ -103,7 +103,7 @@
             </form>
           </div>
         </div>
-        <div class="col-3">
+        <div class="col d-none d-md-block">
           <div class="img1 ">
             <img src="../assets/images/car3.png" class="float-start rounded">
             <form class="text-img1">
@@ -112,7 +112,7 @@
             </form>
           </div>
         </div>
-        <div class="col-3">
+        <div class="col">
           <div class="img1">
             <img src="../assets/images/car4.png" class="float-start rounded">
             <form class="text-img1">
@@ -130,7 +130,7 @@
     <div class="popular container">
       <h2><b> </b></h2>
       <div class="row">
-        <div class="col-3">
+        <div class="col d-none d-xxl-block">
           <div class="img1">
             <img src="../assets/images/motor1.png" class="float-start rounded">
             <form class="text-img1">
@@ -139,7 +139,7 @@
             </form>
           </div>
         </div>
-        <div class="col-3">
+        <div class="col  d-none d-xl-block">
           <div class="img1">
             <img src="../assets/images/motor2.png" class="float-start rounded">
             <form class="text-img1">
@@ -148,7 +148,7 @@
             </form>
           </div>
         </div>
-        <div class="col-3">
+        <div class="col d-none d-md-block">
           <div class="img1 ">
             <img src="../assets/images/motor3.png" class="float-start rounded">
             <form class="text-img1">
@@ -157,7 +157,7 @@
             </form>
           </div>
         </div>
-        <div class="col-3">
+        <div class="col">
           <div class="img1">
             <img src="../assets/images/motor4.png" class="float-start rounded">
             <form class="text-img1">
@@ -174,7 +174,7 @@
     <div class="popular container">
       <h2><b> </b></h2>
       <div class="row">
-        <div class="col-3">
+        <div class="col d-none d-xxl-block">
           <div class="img1">
             <img src="../assets/images/bike1.png" class="float-start rounded">
             <form class="text-img1">
@@ -183,7 +183,7 @@
             </form>
           </div>
         </div>
-        <div class="col-3">
+        <div class="col d-none d-xl-block">
           <div class="img1">
             <img src="../assets/images/bike2.png" class="float-start rounded">
             <form class="text-img1">
@@ -192,7 +192,7 @@
             </form>
           </div>
         </div>
-        <div class="col-3">
+        <div class="col d-none d-md-block">
           <div class="img1 ">
             <img src="../assets/images/bike3.png" class="float-start rounded">
             <form class="text-img1">
@@ -201,7 +201,7 @@
             </form>
           </div>
         </div>
-        <div class="col-3">
+        <div class="col ">
           <div class="img1">
             <img src="../assets/images/bike4.png" class="float-start rounded">
             <form class="text-img1">
@@ -221,7 +221,7 @@
     <hr>
   </div>
 
-  <div class="container">
+  <div class="container mb-5">
     <div class="row">
       <div class="col-xl-6 detail-left">
         <img src="../assets/images/vehicle-detail.png" class="img-detail-vehicle">
