--- a/views/payment.html
+++ b/views/payment.html
@@ -32,7 +32,7 @@
   <div id="navbar-after-login"></div>
   <!--END NAVBAR-->
 
-  <div class="container">
+  <div class=" my-2 media-center">
     <div class="row">
       <div class="margin-reserv">
         <a href="#" class="text-decoration-none href">
@@ -43,10 +43,10 @@
     </div>
   </div>
 
-  <div class="container">
+  <div class=" my-2 media-center">
     <div class="row">
       <div class="col-xl-5">
-        <img src="../assets/images/vehicle-detail.png" alt="Bike" class="payment-img src">
+        <img src="../assets/images/vehicle-detail.png" alt="Bike" class="payment-img src mt-1">
       </div>
       <div class="col-xl-7">
         <h2><b>Fixie - Gray Only </b> </h2>
@@ -58,7 +58,7 @@
     </div>
   </div>
 
-  <div class="container my-5 ">
+  <div class=" my-5 ">
     <div class="row">
       <div class="col-xl-5">
         <form action="">
@@ -85,7 +85,7 @@
     </div>
   </div>
 
-  <div class="container my-5 ">
+  <div class=" my-5 ">
     <div class="row">
       <div class="col-xl-5">
         <form action="">
@@ -113,14 +113,14 @@
     </div>
   </div>
 
-  <div class="container my-5 ">
+  <div class=" my-5 ">
     <div class="row">
       <div class="d-grid col-xl-3 d-flex text-center">
         <label class="label-payment" for=""><br>
-          <h2 class="fw-bold">Payment Code : </h2>
+          <h2 class="fw-bold ">Payment Code : </h2>
         </label>
       </div>
-      <div class="col-xl">
+      <div class="col-xl my-2">
         <div
           class="d-grid bg-transparent position-relative  fw-bold border-2 border-secondary form-control quantity-code">
           <label class=" text-dark" for="">#FG1209878YZS </label><br>
