--- a/views/index-after-login.html
+++ b/views/index-after-login.html
@@ -30,7 +30,7 @@
   <!--NAVBAR-->
   <div id="navbar-after-login"></div>
   <!--END NAVBAR-->
-  
+
   <!--START  HEADER-->
   <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
     <div class="carousel-indicators">
@@ -93,7 +93,7 @@
     <div class="popular">
       <h2><b> Popular in town</b></h2>
       <div class="row">
-        <div class="col">
+        <div class="col d-none d-xxl-block">
           <div class="img1">
             <img src="../assets/images/img3-home.png" class="float-start rounded">
             <form class="text-img1">
@@ -102,7 +102,7 @@
             </form>
           </div>
         </div>
-        <div class="col">
+        <div class="col d-none d-xl-block">
           <div class="img1">
             <img src="../assets/images/img2-home.png" class="float-start rounded">
             <form class="text-img1">
@@ -111,7 +111,7 @@
             </form>
           </div>
         </div>
-        <div class="col">
+        <div class="col d-none d-md-block">
           <div class="img1 ">
             <img src="../assets/images/img1-home.png" class="float-start rounded">
             <form class="text-img1">
