--- a/views/index-after-login.html
+++ b/views/index-after-login.html
@@ -154,12 +154,14 @@
           <h5>Founder Circle</h5>
         </div>
         <div class="col">
-          <div class="img1">
-            <img src="../assets/images/profil-edward.png" class="float-start rounded">
-            <form class="text-next">
-              <i class="fa-solid fa-circle-chevron-left"></i>
-              <i class="fa-solid fa-circle-chevron-right"></i>
-            </form>
+          <div class=" d-flex justify-content-center text-center mt-5">
+            <div class="position-relative">
+              <img class=" rounded" src="../assets/images/profil-edward.png" alt="">
+              <form class="text-next">
+                <i class="fa-solid fa-circle-chevron-left"></i>
+                <i class="fa-solid fa-circle-chevron-right"></i>
+              </form>
+            </div>
           </div>
         </div>
       </div>
