--- a/views/index.html
+++ b/views/index.html
@@ -34,26 +34,26 @@
   <!--START  HEADER-->
   <header class="header-home">
     <div class="header-content">
-      <div class="row container">
-        <div class="col-12">
+      <div class="">
+        <div>
           <h1>Explore and Travel</h1>
         </div>
-        <div class="col-12">
+        <div>
           <p>Vehicle Finder</p>
         </div>
-        <div class="col-12">
+        <div>
           <span class="border-top border-2"></span>
         </div>
-        <div class="col-12">
+        <div>
           <div class="m-4">
             <form action="/examples/actions/confirmation.php" method="post">
-              <div class="col-12">
+              <div>
                 <div class="mb-3">
                   <input type="email" class="form-type-vehicle form-control"
                     placeholder="Type the vehicle (ex. motorbike">
                 </div>
               </div>
-              <div class="col-12 d-flex">
+              <div class="d-flex">
                 <div class="col-3">
                   <div class="mb-3">
                     <select class="form-select form-location-home mx-9">
@@ -87,10 +87,10 @@
   <!--START BODY-->
 
   <div class="main">
-    <div class="popular container">
+    <div class="popular">
       <h2><b> Popular in town</b></h2>
       <div class="row">
-        <div class="col d-none d-xxl-block">
+        <div class="col mb-3 d-none d-xxl-block">
           <div class="img1">
             <img src="../assets/images/img3-home.png" class="float-start rounded">
             <form class="text-img1">
@@ -99,7 +99,7 @@
             </form>
           </div>
         </div>
-        <div class="col d-none d-xl-block">
+        <div class="col mb-3 d-none d-xl-block">
           <div class="img1">
             <img src="../assets/images/img2-home.png" class="float-start rounded">
             <form class="text-img1">
@@ -108,7 +108,7 @@
             </form>
           </div>
         </div>
-        <div class="col d-none d-md-block">
+        <div class="col mb-3 d-none d-md-block">
           <div class="img1 ">
             <img src="../assets/images/img1-home.png" class="float-start rounded">
             <form class="text-img1">
@@ -117,15 +117,17 @@
             </form>
           </div>
         </div>
-        <div class="col">
-          <div class="img1">
-            <img src="../assets/images/img4-home.png" class="float-start rounded">
-            <form class="text-img1">
-              <button type="submit" class="btn head">Malioboro</button>
-              <button type="submit" class="btn">Yogyakarta</button>
-            </form>
-            <div class="next">
-              <i class="fa-solid fa-circle-chevron-right"></i>
+        <div class="col mb-3">
+          <div>
+            <div class="position-relative">
+              <img src="../assets/images/img4-home.png" class="float-start rounded ">
+              <form class="text-img1">
+                <button type="submit" class="btn head">Malioboro</button>
+                <button type="submit" class="btn">Yogyakarta</button>
+              </form>
+              <div class="next next-index">
+                <i class="fa-solid fa-circle-chevron-right"></i>
+              </div>
             </div>
           </div>
         </div>
@@ -134,7 +136,7 @@
 
     <div class="popular">
       <h2><b> Testimonials </b></h2>
-      <div class="row container">
+      <div class="row">
         <div class="col">
           <div class="testi-text-star">
             <i class="fa-solid fa-star"></i>
@@ -151,7 +153,7 @@
           <h5>Founder Circle</h5>
         </div>
         <div class="col">
-          <div class="col-12 d-flex justify-content-center text-center mt-5">
+          <div class=" d-flex justify-content-center text-center mt-5">
             <div class="position-relative">
               <img class=" rounded" src="../assets/images/profil-edward.png" alt="">
               <form class="text-next">
