--- a/views/index-after-login.html
+++ b/views/index-after-login.html
@@ -128,7 +128,7 @@
               <button type="submit" class="btn">Yogyakarta</button>
             </form>
             <div class="next">
-              <i class="fa-solid fa-circle-chevron-right"></i>
+              <i class="d-none d-xxl-block  fa-solid fa-circle-chevron-right"></i>
             </div>
           </div>
         </div>
