--- a/views/login.html
+++ b/views/login.html
@@ -29,11 +29,11 @@
 <body>
   <header class="header-login vh-100">
     <div class="header-content">
-      <div class="row h-100">
+      <div class="row">
         <div class="header-left col-md-6">
         </div>
         <div class="header-right col-md-6">
-          <form class="h-100">
+          <form class="">
             <h1>Login</h1>
             <span>LET’S EXPLORE THE WORLD</span>
             <div>
