--- a/assets/style.css
+++ b/assets/style.css
@@ -447,7 +447,7 @@ header.header-home .header-content span{
   color: rgba(255, 255, 255, 0.5);
   background-color: rgba(255, 255, 255, 0.5);
   border-radius: 6px;
-  width: 200px;
+  /* width: 200px; */
 }
 
 .form-date-home{
@@ -1016,12 +1016,31 @@ display: none;
 }
 
 /***** Small devices (landscape phones, 576px and up) *****/
+@media (max-width: 576px){
+  .h1-home{
+    display: none;
+  }
+  .main .popular h2{
+    font-family: 'Playfair Display', serif;
+    margin-top: 81px;
+    margin-bottom: 55px;
+    font-size: 24px;
+  }
+  .main .popular{
+    font-family: 'Playfair Display', serif;
+    margin-left:unset;
+    margin-right: 120px;
+    margin-top: 81px;
+    margin-bottom: 55px;
+  }
+}
 
 
 @media (max-width: 576px) { 
   footer.footer .row.text {
     display: none;
   }
+
   .btn-profile-cancel{
     width: 120px;
     height: 30px;
@@ -1122,11 +1141,53 @@ display: none;
     margin-left:  0px;  
   }
   .btn-pay-before{
-    margin-left: 50px;
+    margin-left: 80px;
   }
   .container-payment{
     margin-left: 40px;
   }
+  .form-type-vehicle{
+    margin-left:83px;
+    margin-top: 48px;
+    margin-bottom: 34px;
+    color: rgba(255, 255, 255, 0.5);
+    background-color: rgba(255, 255, 255, 0.5);
+    border-radius: 6px;
+    width: 366px;
+  }
+  .form-location-home{
+    margin-left:83px;
+    margin-top: 17px;
+    color: rgba(255, 255, 255, 0.5);
+    background-color: rgba(255, 255, 255, 0.5);
+    border-radius: 6px;
+    /* width: 150px; */
+  }
+  .form-date-home{
+    display: none;
+  }
+  .testi-text{
+    width: 250px;
+    margin-left: 0px;
+    margin-right: 0px;
+    margin-top: 30px;
+    font-size: 12px;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  }
+  .img-home-center{
+    margin-left: 20px;
+  }
+  .edward-rounded{
+    width: 200px;
+  }
+  .testi-text-star{
+    color: #FFCD61;
+    font-size: 20px;
+    margin-top: 104px;
+    text-align: left;
+  }
+
+
 
  }
  @media (min-width: 577px) and (max-width: 768px){
@@ -1238,7 +1299,7 @@ display: none;
     margin-left: 100px;
   }
   .form-date-home{
-    margin-left:190px;
+    display: none;
   }
   .center-navbar{
     text-align: center;
@@ -1250,6 +1311,16 @@ display: none;
     margin-left: 0px;
     padding-left: 0px;
   }
+  .form-type-vehicle{
+    margin-left:83px;
+    margin-top: 48px;
+    margin-bottom: 34px;
+    color: rgba(255, 255, 255, 0.5);
+    background-color: rgba(255, 255, 255, 0.5);
+    border-radius: 6px;
+    width: 466px;
+  }
+
  }
 
 
@@ -1371,7 +1442,7 @@ display: none;
     margin-left: 100px;
   }
   .form-date-home{
-    margin-left:130px;
+    display: none;
   }
   nav.navbar button.btn-login{
   text-align: center;
@@ -1468,7 +1539,7 @@ display: none;
     margin-left: 100px;
   }
   .form-date-home{
-    margin-left:75px;
+    display: none;
   }
   .text-top h5{
     font-size: 66px;
