--- a/views/view-more-detail.html
+++ b/views/view-more-detail.html
@@ -249,7 +249,8 @@
             <h4 class="d-flex align-items-center"><b> Rp. 128.000/day</b></h4>
           </div>
           <div class="d-flex">
-            <a href="#"><button type="button" class="btn-detail-reserv btn btn-info">Reservation</button></a>
+            <a href="../views/reservation.html"><button type="button"
+                class="btn-detail-reserv btn btn-info">Reservation</button></a>
             <a href="#"><button type="button" class="btn-detail-fav btn btn-info"><i
                   class="fa-solid fa-heart"></i></button></a>
           </div>
